2007-08-17  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* X11Display.cs, X11Hwnd.cs, XplatUIX11-new.cs: Update PaintEventStart/End
	  to take a Message argument.

2007-05-25  Jackson Harper  <jackson@ximian.com>

	* X11Display.cs: Remove some of the dnd hooks.

2007-05-03  Jonathan Pobst  <monkey@jpobst.com>

	* XplatUIX11-new.cs: Implement RaiseIdle.

2007-04-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* XplatUIX11-new.cs: Renamed Caption to CaptionHeight.

2007-04-20  Gert Driesen  <drieseng@users.soourceforge.net>

	* XplatUIX11-new.cs: Implemented MenuAccessKeysUnderlined by always
	return false.

2007-04-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* X11Display.cs: Remove warnings.

2007-04-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* X11Display.cs, XplatUIX11-new.cs: Add and implement
	  DefineStdCursorBitmap.

2007-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Xlib.cs: Remove import of libgdiplus' GetFontMetrics (it doesn't 
	exists anymore).
	* XplatUIX11-new.cs: Re-implement GetFontMetrics with existing APIs.

2007-04-03  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XplatUIX11-new.cs: Port changes from XplatUIX11.cs

2007-03-29  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs: Prevent system to open more than one balloon.

2007-03-29  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs: Implement SystrayBalloon for X11 systems. 

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs: Remove unneeded parameter owner in SetTopmost. 

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs, X11Hwnd.cs: Set _NET_WM_STATE_ABOVE on SetTopmost, it 
	fixes Topmost behavior in X11 environments. 

2007-03-19  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11-new.cs, X11Hwnd.cs: SetOwner implemented using same code from
	SetTopmost but cheking for null owner to remove transient. The SetTopmost
	will be change on a decond step.

2007-03-15  Andreia Gaita  <avidigal@novell.com>
